--- a/school/src/main/resources/application.yaml
+++ b/school/src/main/resources/application.yaml
@@ -6,23 +6,27 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 
 server:
-  port: 8090
+  port: 8070
 
 spring:
   application:
-    name: student
+    name: school
 
   config:
     import: optional:configserver:http://localhost:8888
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql:localhost:5432/students
+    url: jdbc:postgresql://localhost:5432/microservice
     username: postgres
     password: password
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+
+application:
+  config:
+    student-url: http://localhost:8090/api/v1/students
