--- a/student/src/main/resources/application.yaml
+++ b/student/src/main/resources/application.yaml
@@ -6,24 +6,23 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 
 server:
-  port: 8070
+  port: 8090
 
 spring:
   application:
-    name: school
+    name: student
 
   config:
     import: optional:configserver:http://localhost:8888
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql:localhost:5432/schools
+    url: jdbc:postgresql://localhost:5432/microservice
     username: postgres
     password: password
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-
 
