added zipkin dependencies

--- a/config-server/src/main/resources/configurations/gateway.yml
+++ b/config-server/src/main/resources/configurations/gateway.yml
@@ -29,3 +29,7 @@ spring:
           uri: http://localhost:8070
           predicates:
             - Path=/api/v1/schools/**
+management:
+  tracing:
+    sampling:
+      probability: 1.0
