--- a/config-server/src/main/resources/configurations/school.yml
+++ b/config-server/src/main/resources/configurations/school.yml
@@ -29,3 +29,8 @@ spring:
 application:
   config:
     student-url: http://localhost:8090/api/v1/students
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
